--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad Words</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-dark">
+    <section class="container w-50 bg-primary mt-5">
+        <form action="badwords.php" method="get">
+            <h1>Badword Form</h1>
+            <div class="mb-3">
+                <label for="badwords" class="form-label">Parola da censurare</label>
+                <input type="text" class="form-control" id="badwords">
+            </div>
+            <div class="mb-3">
+                <label for="text" class="form-label">Paragrafo</label>
+                <input type="password" class="form-control" id="text">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </section>
 </body>
 
 </html>
