--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 
 <body class="bg-dark">
-    <section class="container w-50 bg-primary mt-5">
-        <form action="badwords.php" method="get">
+    <section class="container w-50 bg-primary mt-5 p-4">
+        <form action="badwords.php" method="GET">
             <h1>Badword Form</h1>
             <div class="mb-3">
                 <label for="badwords" class="form-label">Parola da censurare</label>
-                <input type="text" class="form-control" id="badwords">
+                <input type="text" class="form-control" id="badwords" name="badwords">
             </div>
             <div class="mb-3">
                 <label for="text" class="form-label">Paragrafo</label>
-                <input type="password" class="form-control" id="text">
+                <input type="text" class="form-control" id="text" name="text">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-success">Submit</button>
         </form>
     </section>
 </body>
